--- a/index.html
+++ b/index.html
@@ -56,5 +56,69 @@
 
     </section>
 
+    <div class="service">
+        <div class="title">
+            <h2>Skills</h2>
+
+        <div class="box">
+            <div class="card">
+                <i class="fa-solid fa-cubes"></i>
+                <h5>Development</h5>
+                <div class="pra">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. </p>
+                    <p style="text-align: center;">
+                        <a class="button" href="#">Read More</a>
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="card">
+                <i class="fa-brands fa-github"></i>
+                <h5>Control</h5>
+                <div class="pra">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. </p>
+                    <p style="text-align: center;">
+                        <a class="button" href="#">Read More</a>
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="card">
+                <i class="fa-solid fa-fire"></i>
+                <h5>Speed</h5>
+                <div class="pra">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. </p>
+                    <p style="text-align: center;">
+                        <a class="button" href="#">Read More</a>
+                    </p>
+                </div>
+
+            </div>
+
+        </div>
+
+        </div>
+
+    </div>
+
+    <div class="contact-me">
+        <p>Let's develop you an amazing system</p>
+        <a class="button-two" href="#">Get a quote</a>
+
+    </div>
+
+    <footer>
+        <p>Koshy George</p>
+        <p>For more information about me, check out my socials.</p>
+        <div class="socials">
+            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="fa-brands fa-telegram"></i></a>
+        </div>
+    </footer>
+
 </body>
 </html>
