--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-    <div class="intro">
+    <div class="header-links">
         <nav>
             <h2 class="logo">Pro<span>file</span></h2>
             <ul>
@@ -24,16 +24,21 @@
             <a href="#" class="btn">Email</a>
         </nav>
 
+
+    </div>
+
+    <div class="intro">
+
         <div class="content">
             <h4>Hello my name is</h4>
             <h1>Koshy <span> George</span></h1>
             <h3>I am an aspiring a Developer.</h3>
-            <div class="newsletter">
+            <!-- <div class="newsletter">
                 <form>
                     <input type="email" name="email" id="mail" placeholder="Enter Your Email">
                     <input type="submit" value="Submit">
                 </form>
-            </div>
+            </div> -->
         </div>
         
 
