--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <h2 class="logo">Pro<span>file</span></h2>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a id="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Contact</a></li>
